# UniMate-Chatboot-using-crewai

./: README.md  crewai_flow.html  poem.txt  pyproject.toml  report.md
src/unimakte/: crew.py  main.py  unimate.py
src/unimakte/config/: agents.yaml  gemini_llm.yaml  tasks.yaml
src/unimatechatbot/: main.py  unimate_main.py
src/unimatechatbot/crews/unimate_crew/: unimate.py
src/unimatechatbot/crews/unimate_crew/config/: agent.yaml  task.yaml
