[project]
name = "unimatechatbot"
version = "0.1.0"
description = "unimatechatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "langchain>=0.3.25",
]

[project.scripts]
kickoff = "unimatechatbot.main:kickoff"
run_crew = "unimatechatbot.main:kickoff"
plot = "unimatechatbot.unimate_main:plot"
unimate="unimatechatbot.unimate_main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
